# api/models/like/changeLikeStatus.ts
@@ -1,0 +1,9 @@
+import { User } from "@prisma/client";
+import { Request, Response } from "express";
+
+export type ChangeLikeRequestModel = Request<{ trainingId: number }, any, any>;
+
+export type ChangeLikeResponseModel = Response<
+  { liked: boolean },
+  { user: User }
+>;
