# api/routes/userRouter.ts
@@ -2,6 +2,7 @@ import express from "express";
 import { addQuestionAnswer } from "../controllers/userController/answer/addQuestionAnswer";
 import { deleteQuestionAnswer } from "../controllers/userController/answer/deleteQuestionAnswer";
 import { editQuestionAnswer } from "../controllers/userController/answer/editQuestionAnswer";
+import { changeLikeStatus } from "../controllers/userController/like/changeLikeStatus";
 import { profile } from "../controllers/userController/profile";
 import { addQuestion } from "../controllers/userController/question/addQuestion";
 import { addQuestionWithAnswers } from "../controllers/userController/question/addQuestionWithAnswers";
@@ -70,7 +71,8 @@ userRouter.get("/tag", getAllTags);
 userRouter.get("/tag/:trainingId", getAllTagsForTraining);
 userRouter.post("/tag", addTagValidation, addTag);
 
-// LIKES TODO:Likes
+// LIKES
+userRouter.post("/like/:trainingId", changeLikeStatus);
 
 // QUESTIONS
 userRouter.get("/question/all/:trainingId", getQuestions);
